--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
             alt="Logo da empresa J-Work Contabilidade"
           />
         </div>
-        <nav></nav>
+        <nav>
+          <a href="#">home</a>
+          <a href="#">quem somos</a>
+          <a href="#">serviços</a>
+          <a href="#">localizaçao</a>
+          <a href="#">contatos</a>
+        </nav>
       </header>
-      <div></div>
+      <div>
+        <img src="https://i.postimg.cc/7PGfddjS/banner.jpg" alt="" />
+      </div>
       <article></article>
       <article></article>
       <article></article>
