--- a/index.html
+++ b/index.html
@@ -1,33 +1,80 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>J-Work</title>
+    <title>J-work</title>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" typer="text/css" href="src/styles.css" />
   </head>
   <body>
     <div id="app">
       <header>
-        <div>
+        <div id="logo">
           <img
             src="https://i.postimg.cc/hhRF5f6Z/logo.jpg"
-            alt="Logo da empresa J-Work Contabilidade"
+            alt="Logo da empresa
+          J-Work Contabilidade"
           />
         </div>
-        <nav>
-          <a href="#">home</a>
-          <a href="#">quem somos</a>
-          <a href="#">serviços</a>
-          <a href="#">localizaçao</a>
-          <a href="#">contatos</a>
+        <nav id="menu">
+          <a href="#">HOME2</a>
+          <a href="#">Quem Somos</a>
+          <a href="#">Serviços</a>
+          <a href="#">Localização</a>
+          <a href="#">Contato</a>
         </nav>
       </header>
+
       <div>
         <img src="https://i.postimg.cc/7PGfddjS/banner.jpg" alt="" />
       </div>
-      <article></article>
-      <article></article>
-      <article></article>
-      <article></article>
+
+      <article>
+        <h2>Título1</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel,
+          consequatur!hsgdwd
+        </p>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Expedita,
+          non.
+        </p>
+        <a href="#">Saiba Mais</a>
+      </article>
+      <article>
+        <h2>Título2</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iusto,
+          magni?
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos,
+          animi?
+        </p>
+        <a href="#">Saiba Mais</a>
+      </article>
+      <article>
+        <h2>Título3</h2>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. At, minima!
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus,
+          asperiores?
+        </p>
+        <a href="#">Saiba Mais</a>
+      </article>
+      <article>
+        <h2>Título4</h2>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi, qui.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi,
+          exercitationem.
+        </p>
+        <a href="#">Saiba Mais</a>
+      </article>
+
       <footer></footer>
     </div>
   </body>
